hphp/hack/test/typecheck/readonly/meth_caller.php.exp
File "meth_caller.php", line 12, characters 8-48:
`meth_caller` does not support methods that return `readonly` objects (Typing[4464])
  File "meth_caller.php", line 6, characters 19-34:
  This is why I think this method returns a `readonly` object
